--- a/resources/templates/Entity/Comment/Short.mustache
+++ b/resources/templates/Entity/Comment/Short.mustache
@@ -31,8 +31,8 @@
 		{{{aftercontent}}}
 	</div>
 </div>
-<ul class="bs-social-entitylist-children">
+<div class="bs-social-entitylist-children">
 	{{{beforechildren}}}
 	{{{children}}}
 	{{{afterchildren}}}
-</ul>
+</div>
