--- a/resources/templates/Entity/Comment/Short.mustache
+++ b/resources/templates/Entity/Comment/Short.mustache
@@ -11,10 +11,7 @@
 				<a href="{{authorpage}}" title="{{author}}">{{author}}</a>
 			</span>
 		</div>
-		<div class="bs-social-entity-actions">
-			<div class="bs-social-entity-actions-btn"></div>
-			<div class="bs-social-entity-actions-content"></div>
-		</div>
+		{{{entityactions}}}
 		<div class="bs-social-entity-beforecontent">
 			{{{beforecontent}}}
 		</div>
